hw3; add webClient to bot; add telegram commands; writing tests;